--- a/index.html
+++ b/index.html
@@ -12,5 +12,33 @@
       src="https://camo.githubusercontent.com/c0cd7991caeb2b8b037fd2088dabc216b4d50f3f/68747470733a2f2f66656174757265666c6167732e696f2f77702d636f6e74656e742f75706c6f6164732f323031382f30332f666561747572656272616e6368696e67776974686f75742e6a7067"
       alt=""
     />
+    <h2>What do we need to do to build a feature</h2>
+    <ol>
+      <li>
+        Go back to development
+      </li>
+      <li>
+        Pull the development branch (so the new branch starts up to date)
+      </li>
+      <li>
+        Checkout a new branch `git checkout -b feat-add-bla`
+      </li>
+      <li>
+        Build a feature & commit step by step
+      </li>
+      <li>
+        Push our branch to github
+      </li>
+      <li>
+        Make a pull request (with a summary, context, why, what, doubts,
+        screenshot)
+      </li>
+      <li>
+        Ask for review, wait .. patiently, coffee maybe
+      </li>
+      <li>
+        Implement feedback, or enjoy your work being merged
+      </li>
+    </ol>
   </body>
 </html>
